# ProjectDesigner

./: README.md  pyproject.toml  setup.cfg  tox.ini
.github/worflows/: main_push_run_tests_on_different_envs.yaml
source/words_counter/: main.py
tests/: test_words_counter.py
