[metadata]
name = words_counter
description = Couple of handy methods to count words of the text.
author = Max Kumundzhiev
licence = MIT
licence_file = LICENCE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    words_counter

install_requires =
    pydantic

python_requires =
    >=3.6

package_dir =
    =source

zip_safe =
    no

# stands for testing requirements
[options.extras_require]
testing =
    pytest >= 6.0
    pytest-cov >= 2.0
    mypy >= 0.910
    flake >= 3.9
    tox >= 3.24

# stands for typing requirements
# file py.typed has to be created within the source package
[options.package_data]
words_counter = py.typed

# stands for style (linter) requirements
[flake8]
max-line-length = 160

